# reference_model_ros2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clean.sh  compile_clang.sh  compile_gcc.sh  package.xml
.cache/clangd/index/: main_position.cpp.C59701716320FB0E.idx  main_velocity.cpp.EEF37DE4F74E01E1.idx  ref_model_position.cpp.C8DCFA156D97411D.idx  ref_model_position.hpp.00ED5CA870E8739B.idx  ref_model_velocity.cpp.1A04732E2263D766.idx  ref_model_velocity.hpp.184ADF429FAAAAD3.idx
config/: params_pos_model.yaml
include/: ref_model_position.hpp  ref_model_velocity.hpp
launch/: bringup.launch.py  bringup_position.launch.py  bringup_velocity.launch.py
src/: main_position.cpp  ref_model_position.cpp  ref_model_velocity.cpp
